# openhack

./: README.md  pyproject.toml
openhack/: __init__.py  __main__.py  config.py  headless_scan.py  setup.py  tui.py
openhack/agents/: checkpoint.py  coordinator.py  llm.py
tests/: test_checkpoint.py
