[project]
name = "openhack"
version = "0.1.0"
description = "AI-powered security scanner for your codebase. Find SQL injection, XSS, IDOR, auth bypass, and more — straight from your terminal."
readme = "README.md"
requires-python = ">=3.11"
license = "AGPL-3.0-only"
authors = [
    { name = "OpenHack" },
]
keywords = [
    "security",
    "vulnerability-scanner",
    "sast",
    "appsec",
    "ai-security",
    "code-review",
    "static-analysis",
    "llm",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Bug Tracking",
]
dependencies = [
    "prompt-toolkit>=3.0.0",
    "rich>=13.0.0",
    "openai>=1.0.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "tree-sitter>=0.25.2",
    "tree-sitter-javascript>=0.25.0",
    "tree-sitter-typescript>=0.23.2",
    "tree-sitter-python>=0.25.0",
    "aiohttp>=3.9.0",
    "httpx>=0.25.0",
    "pygments>=2.19.0",
]

[project.optional-dependencies]
browser = ["playwright>=1.40.0"]

[project.urls]
Homepage = "https://openhack.com"
Documentation = "https://github.com/openhackai/openhack"
Repository = "https://github.com/openhackai/openhack"
Issues = "https://github.com/openhackai/openhack/issues"

[project.scripts]
openhack = "openhack.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["openhack"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=7.1.0",
    "twine>=6.2.0",
]

